add kafka flow to sales controller

--- a/src/Ambev.DeveloperEvaluation.WebApi/appsettings.json
+++ b/src/Ambev.DeveloperEvaluation.WebApi/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "ClientId": "ambev-developer-evaluation",
+    "SecurityProtocol": "Plaintext"
+  },
   "AllowedHosts": "*"
 }
